added other stuff

--- a/mycode.ipynb
+++ b/mycode.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "print (\"hello world my name is tracy\")\n",
+    "print (\"hello world my name is tracy and Jehovah is on my side\")\n",
     "\n"
    ]
   }
